--- a/Dropdown.html
+++ b/Dropdown.html
@@ -12,96 +12,138 @@
 
     body {
       margin: 0;
-      background: #f0f2ff;
+      background: linear-gradient(135deg, #e0e4ff, #c0c6ff);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 80px; /* navbar height + spacing */
     }
 
     nav {
       position: fixed;
       top: 0;
-      left: 0;
-      right: 0;
-      background-color: rgb(102, 0, 255);
-      padding: 12px 24px;
-      box-shadow: 0 4px 8px rgba(102, 0, 255, 0.4);
-      z-index: 1000;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(102, 0, 255, 0.75);
+      backdrop-filter: blur(10px);
+      padding: 12px 32px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(102, 0, 255, 0.3);
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
+      z-index: 1000;
+      width: max-content;
     }
 
     button {
-      padding: 12px 20px;
-      border-radius: 12px;
+      padding: 12px 24px;
+      border-radius: 30px;
       border: none;
       cursor: pointer;
-      background-color: #fff;
+      background: #fff;
       color: rgb(102, 0, 255);
-      font-weight: 600;
-      font-size: 1rem;
-      box-shadow: 0 4px 8px rgba(102, 0, 255, 0.3);
+      font-weight: 700;
+      font-size: 1.1rem;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 6px 12px rgba(102, 0, 255, 0.3);
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
+      position: relative;
     }
 
     button:hover,
     button:focus {
-      background-color: #e1dcff;
+      background-color: #e9e2ff;
       color: rgb(60, 0, 150);
-      box-shadow: 0 6px 14px rgba(60, 0, 150, 0.5);
+      box-shadow: 0 8px 22px rgba(60, 0, 150, 0.5);
       outline: none;
+    }
+
+    /* Icona freccia */
+    button svg {
+      width: 18px;
+      height: 18px;
+      fill: rgb(102, 0, 255);
+      transition: transform 0.3s ease;
+      transform-origin: center;
+    }
+
+    button[aria-expanded="true"] svg {
+      transform: rotate(180deg);
+      fill: rgb(60, 0, 150);
     }
 
     #dropdown {
       position: absolute;
-      top: calc(100% + 8px);
-      left: 24px;
-      background-color: rgb(102, 0, 255);
-      border-radius: 12px;
-      padding: 12px 0;
-      min-width: 160px;
-      box-shadow: 0 10px 20px rgba(102, 0, 255, 0.3);
+      top: calc(100% + 10px);
+      left: 50%;
+      transform: translateX(-50%) translateY(-15px);
+      background: linear-gradient(135deg, #6e40ff, #4b00d4);
+      border-radius: 20px;
+      padding: 16px 0;
+      min-width: 200px;
+      box-shadow: 0 15px 30px rgba(75, 0, 212, 0.6);
       opacity: 0;
       pointer-events: none;
-      transform: translateY(-10px);
-      transition: opacity 0.3s ease, transform 0.3s ease;
+      transition: opacity 0.4s ease, transform 0.4s ease;
       z-index: 1000;
     }
 
     #dropdown.show {
       opacity: 1;
       pointer-events: auto;
-      transform: translateY(0);
+      transform: translateX(-50%) translateY(0);
     }
 
     #dropdown-content {
       display: flex;
       flex-direction: column;
-      gap: 8px;
-      padding: 0 16px;
+      gap: 12px;
+      padding: 0 24px;
     }
 
     #dropdown-content a {
-      color: white;
+      color: #e0dfff;
       text-decoration: none;
-      padding: 8px 12px;
-      border-radius: 8px;
-      font-weight: 600;
+      padding: 10px 18px;
+      border-radius: 15px;
+      font-weight: 700;
       cursor: pointer;
-      transition: background-color 0.25s ease, color 0.25s ease;
+      background: transparent;
+      transition: background 0.3s ease, color 0.3s ease;
+      box-shadow: inset 0 0 0 0 #b6aaff;
     }
 
     #dropdown-content a:hover,
     #dropdown-content a:focus {
-      background-color: #b2a0ff;
-      color: rgb(60, 0, 150);
+      background: linear-gradient(135deg, #b6aaff, #7c64ff);
+      color: #fff;
+      box-shadow: inset 0 0 10px 2px #b6aaff;
       outline: none;
     }
   </style>
 </head>
 <body>
   <nav>
-    <button aria-haspopup="true" aria-expanded="false" aria-controls="dropdown" id="dropdown-button">
+    <button
+      aria-haspopup="true"
+      aria-expanded="false"
+      aria-controls="dropdown"
+      id="dropdown-button"
+    >
       Toggle dropdown
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        aria-hidden="true"
+        focusable="false"
+      >
+        <path d="M5 8l5 5 5-5H5z" />
+      </svg>
     </button>
     <div id="dropdown" role="menu" aria-labelledby="dropdown-button" tabindex="-1">
       <div id="dropdown-content">
@@ -124,7 +166,6 @@
       }
     });
 
-    // Close dropdown clicking outside
     document.addEventListener("click", (e) => {
       if (!dropdown.contains(e.target) && !button.contains(e.target)) {
         dropdown.classList.remove("show");
@@ -132,7 +173,6 @@
       }
     });
 
-    // Close dropdown on Escape key
     document.addEventListener("keydown", (e) => {
       if (e.key === "Escape" && dropdown.classList.contains("show")) {
         dropdown.classList.remove("show");
