--- a/Dropdown.html
+++ b/Dropdown.html
@@ -114,13 +114,12 @@
       font-weight: 700;
       cursor: pointer;
       background: transparent;
-      transition: background 0.3s ease, color 0.3s ease;
       box-shadow: inset 0 0 0 0 #b6aaff;
     }
 
     #dropdown-content a:hover,
     #dropdown-content a:focus {
-      background: linear-gradient(135deg, #b6aaff, #7c64ff);
+      background: #b6aaff;
       color: #fff;
       box-shadow: inset 0 0 10px 2px #b6aaff;
       outline: none;
