--- a/LISTE.html
+++ b/LISTE.html
@@ -30,7 +30,7 @@
       margin-bottom: 40px;
     }
 
-    /* Personalizzo il bullet dell'ul */
+    
     ul {
       list-style-type: none;
     }
@@ -45,7 +45,7 @@
     }
 
     ul li::before {
-      content: "■"; /* quadratino pieno */
+      content: "■"; 
       position: absolute;
       left: 0;
       top: 3px;
@@ -53,7 +53,7 @@
       font-size: 1.2rem;
     }
 
-    /* Stile per ol con numeri romani (I, II, III, ...) */
+    
     ol {
       list-style-type: upper-roman;
       counter-reset: item;
